Moving from personal webpage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-Hello World
+<html>
+<head>
+<title>
+	Abhirut Gupta
+</title>
+</head>
+<body>
+<table width="100%">
+<tr>
+<td><h1>Abhirut Gupta</h1><td>
+<td><img src="./profile.jpg" style="width:150px;height:150px;"/></td>
+</tr>
+</table>
+<p><a target="_blank" href="./cv.pdf">CV</a></p>
+<div>
+<p>
+I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, currently working on automating technical support. <a target="_blank" href="./DESIRE_ICSOC2016.pdf">Here's</a> a workshop paper we wrote about the system, set to appear in the proceedings of ICSOC 2016 Workshops.
+</p>
+<p>
+Currently, I am working on the problem of extracting procedures from technical support documents like <a target="_blank" href="https://www.ibm.com/support/knowledgecenter/en/SSPG9M/Analytics/Admin/reallocating_credits_clientID.html">this one</a>, with the goal of driving conversation for guided support and automation.
+</p>
+<p>
+I am also working on an IBM Open Science Collaboration Project with Prof. <a target="_blank" href="http://www.facweb.iitkgp.ernet.in/~niloy/">Niloy Ganguly</a> from IIT Kharagpur, where we are trying to study evolution of ideas in scientific articles and how a research paper becomes "seminal".
+</p>
+</div>
+<div>
+<h3>Education</h3>
+<p>
+<ul>
+<li>MTech: Computer Science and Engineering, IIT Bombay. Thesis title: <a target="_blank" href="./timeline_abst.html">Timeline Generation for Fluent Quantities</a>. Thesis advisor: Prof. <a target="_blank" href="https://www.cse.iitb.ac.in/~sunita/">Sunita Sarawagi</a></li>
+<li>BTech: Computer Science and Engineering, NIT Nagpur</li>
+</ul>
+</p>
+</div>
+<div>
+<h3>Research Interest</h3>
+<p>My research interest lies in exploring application of machine learning techniques to open problems in Natural
+Language Processing.  Areas of interest include Natural Language Processing, Information Extraction,
+Information Retrieval, and Machine Learning.</p>
+<p>In particular, I would like to explore techniques for understanding unstructured information like language or images with limited supervision.</p>
+</div>
+<div>
+<h3>Publications</h3>
+<ul>
+<li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Desire: Deep Semantic Understanding and Retrieval for Technical Support Services. Set to appear in <a target="_blank" href="http://www.springer.com/in/book/9783319681351">ICSOC 2016 Workshops</a></li>
+</ul>
+</div>
+<div>
+<h3>Patents</h3>
+<ol>
+<li>System and Method for Instance Specific Aspect Based Cross Documents Sentiment Aggregation.  Application
+Number 14/937551</li>
+<li>Deep Learning based Unsupervised Event Learning for Economic Indicator Prediction.  Application Number
+15/258176</li>
+</ol>
+</div>
+<!--<p>
+I used to be a Master's student at <a target="_blank" href="">IIT Bombay</a>, where I worked under the supervision of <a target="_blank" href="https://www.cse.iitb.ac.in/~sunita/">Prof. Sunita Sarawagi</a>.
+</p>-->
+</body>
