--- a/index.html
+++ b/index.html
@@ -1,29 +1,54 @@
 <html>
 <head>
-<title>
-	Abhirut Gupta
-</title>
+<basefont size="10">
+    <meta charset="utf-8">
+    <title>Abhirut Gupta</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="./bootstrap/css/bootstrap.css" rel="stylesheet">
+    <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      	padding-left: 300px;
+      	padding-right: 300px;
+      }
+    </style>
+    <link href="./bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
 <body>
+<div id="Content">
 <table width="100%">
 <tr>
-<td><h1>Abhirut Gupta</h1><td>
-<td><img src="./profile.jpg" style="width:150px;height:150px;"/></td>
+<td width="70%">
+<p>
+<h1>Abhirut Gupta</h1>
+<i>Research Software Engineer</i> <br>
+<a href="http://www.research.ibm.com/labs/india/">IBM Research</a><br>
+
+Email: abhirutgupta@in.ibm.com <br>
+<a target="_blank" href="./cv.pdf">CV</a><br>
+<br>
+
+<p>
+	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, currently working on automating technical support. <a target="_blank" href="./DESIRE_ICSOC2016.pdf">Here's</a> a workshop paper we wrote about the system, set to appear in the proceedings of ICSOC 2016 Workshops.
+	Currently, I am working on the problem of extracting procedures from technical support documents like <a target="_blank" href="https://www.ibm.com/support/knowledgecenter/en/SSPG9M/Analytics/Admin/reallocating_credits_clientID.html">this one</a>, with the goal of driving conversation for guided support and automation.
+	I am also working on an IBM Open Science Collaboration Project with Prof. <a target="_blank" href="http://www.facweb.iitkgp.ernet.in/~niloy/">Niloy Ganguly</a> from IIT Kharagpur, where we are trying to study evolution of ideas in scientific articles and how a research paper becomes "seminal".
+</p>
+
+</p>
+</td>
+<td>
+<p align="center"><img border="0" src="./profile.jpg" style="width:150px;height:150px;"/><br/>
+</td>
+
 </tr>
 </table>
-<p><a target="_blank" href="./cv.pdf">CV</a></p>
-<div>
-<p>
-I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, currently working on automating technical support. <a target="_blank" href="./DESIRE_ICSOC2016.pdf">Here's</a> a workshop paper we wrote about the system, set to appear in the proceedings of ICSOC 2016 Workshops.
-</p>
-<p>
-Currently, I am working on the problem of extracting procedures from technical support documents like <a target="_blank" href="https://www.ibm.com/support/knowledgecenter/en/SSPG9M/Analytics/Admin/reallocating_credits_clientID.html">this one</a>, with the goal of driving conversation for guided support and automation.
-</p>
-<p>
-I am also working on an IBM Open Science Collaboration Project with Prof. <a target="_blank" href="http://www.facweb.iitkgp.ernet.in/~niloy/">Niloy Ganguly</a> from IIT Kharagpur, where we are trying to study evolution of ideas in scientific articles and how a research paper becomes "seminal".
-</p>
-</div>
-<div>
+<br/>
+
+<div class="well">
 <h3>Education</h3>
 <p>
 <ul>
@@ -32,20 +57,20 @@ I am also working on an IBM Open Science Collaboration Project with Prof. <a tar
 </ul>
 </p>
 </div>
-<div>
+<div class="well">
 <h3>Research Interest</h3>
 <p>My research interest lies in exploring application of machine learning techniques to open problems in Natural
 Language Processing.  Areas of interest include Natural Language Processing, Information Extraction,
 Information Retrieval, and Machine Learning.</p>
 <p>In particular, I would like to explore techniques for understanding unstructured information like language or images with limited supervision.</p>
 </div>
-<div>
+<div class="well">
 <h3>Publications</h3>
 <ul>
 <li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Desire: Deep Semantic Understanding and Retrieval for Technical Support Services. Set to appear in <a target="_blank" href="http://www.springer.com/in/book/9783319681351">ICSOC 2016 Workshops</a></li>
 </ul>
 </div>
-<div>
+<div class="well">
 <h3>Patents</h3>
 <ol>
 <li>System and Method for Instance Specific Aspect Based Cross Documents Sentiment Aggregation.  Application
