Adding header and space for a blog

--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
     <link href="./bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
 <body>
+
+<div class="navbar navbar-fixed-top">
+	<div class="navbar-inner">
+	<div class="container">
+		<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</a>
+		<a class="brand" href="index.html">Abhirut Gupta</a>
+		<ul class="nav">
+			<li class="active"><a href="index.html">Home</a></li>
+			<li><a href="cv.pdf">C.V.</a></li>
+			<li><a href="blog/index.html">Blog</a></li>
+		</ul>
+		<div class="nav-collapse">
+		</div><!--/.nav-collapse -->
+	</div>
+	</div>
+</div>
+
 <div id="Content">
 <table width="100%">
 <tr>
