--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@ Email: abhirutgupta@in.ibm.com <br>
 <br>
 
 <p>
-	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, currently working on automating technical support. <a target="_blank" href="./DESIRE_ICSOC2016.pdf">Here's</a> a workshop paper we wrote about the system, set to appear in the proceedings of ICSOC 2016 Workshops.
-	Currently, I am working on the problem of extracting procedures from technical support documents like <a target="_blank" href="https://www.ibm.com/support/knowledgecenter/en/SSPG9M/Analytics/Admin/reallocating_credits_clientID.html">this one</a>, with the goal of driving conversation for guided support and automation.
+	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, currently working on automating technical support. Currently, I am working on the problem of extracting procedures from technical support documents like <a target="_blank" href="https://www.ibm.com/support/knowledgecenter/en/SSPG9M/Analytics/Admin/reallocating_credits_clientID.html">this one</a>, with the goal of driving conversation for guided support and automation.
 	I am also working on an IBM Open Science Collaboration Project with Prof. <a target="_blank" href="http://www.facweb.iitkgp.ernet.in/~niloy/">Niloy Ganguly</a> from IIT Kharagpur, where we are trying to study evolution of ideas in scientific articles and how a research paper becomes "seminal".
 </p>
 
@@ -88,7 +87,8 @@ Information Retrieval, and Machine Learning.</p>
 <div class="well">
 <h3>Publications</h3>
 <ul>
-<li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Desire: Deep Semantic Understanding and Retrieval for Technical Support Services. Set to appear in <a target="_blank" href="http://www.springer.com/in/book/9783319681351">ICSOC 2016 Workshops</a></li>
+<li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Desire: Deep Semantic Understanding and Retrieval for Technical Support Services. <a target="_blank" href="http://www.springer.com/in/book/9783319681351">ICSOC 2016 Workshops</a>. <a target="_blank" href="./DESIRE_ICSOC2016.pdf">PDF</a></li>
+<li><b>Abhirut Gupta</b>, Anupama Ray, Gautam Singh, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Semantic Parsing for Technical Support Questions. Set to appear in <a target="_blank" href="https://coling2018.org/">COLING 2018</a></li>
 </ul>
 </div>
 <div class="well">
