Changes on the introduction

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Email: abhirutgupta@in.ibm.com <br>
 <br>
 
 <p>
-	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, currently working on automating technical support. Currently, I am working on the problem of extracting procedures from technical support documents like <a target="_blank" href="https://www.ibm.com/support/knowledgecenter/en/SSPG9M/Analytics/Admin/reallocating_credits_clientID.html">this one</a>, with the goal of driving conversation for guided support and automation.
+	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>. I work on automating technical support. Currently, I am working on the problem of extracting procedures from technical support documents like <a target="_blank" href="https://www.ibm.com/support/knowledgecenter/en/SSPG9M/Analytics/Admin/reallocating_credits_clientID.html">this one</a>, with the goal of driving conversation for guided support and automation.
 	I am also working on an IBM Open Science Collaboration Project with Prof. <a target="_blank" href="http://www.facweb.iitkgp.ernet.in/~niloy/">Niloy Ganguly</a> from IIT Kharagpur, where we are trying to study evolution of ideas in scientific articles and how a research paper becomes "seminal".
 </p>
 
