Added procedure extraction paper

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Information Retrieval, and Machine Learning.</p>
 <div class="well">
 <h3>Publications</h3>
 <ol>
+<li><b>Abhirut Gupta</b>, Abhay Khosla, Gautam Singh, Gargi Dasgupta. Mining Procedures from Technical Support Documents. arXiv preprint <a href="https://arxiv.org/abs/1805.09780">arXiv:1805.09780</a></li>
 <li><b>Abhirut Gupta</b>, Anupama Ray, Gautam Singh, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Semantic Parsing for Technical Support Questions. Set to appear in <a target="_blank" href="https://coling2018.org/">COLING 2018</a></li>
 <li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Desire: Deep Semantic Understanding and Retrieval for Technical Support Services. <a target="_blank" href="http://www.springer.com/in/book/9783319681351">ICSOC 2016 Workshops</a>. <a target="_blank" href="./DESIRE_ICSOC2016.pdf">PDF</a></li>
 </ol>
