--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ Email: abhirutgupta@in.ibm.com <br>
 <br>
 
 <p>
-	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>. I work on automating technical support. Currently, I am working on the problem of extracting procedures from technical support documents like <a target="_blank" href="https://www.ibm.com/support/knowledgecenter/en/SSPG9M/Analytics/Admin/reallocating_credits_clientID.html">this one</a>, with the goal of driving conversation for guided support and automation.
-	I am also working on an IBM Open Science Collaboration Project with Prof. <a target="_blank" href="http://www.facweb.iitkgp.ernet.in/~niloy/">Niloy Ganguly</a> from IIT Kharagpur, where we are trying to study evolution of ideas in scientific articles and how a research paper becomes "seminal".
+	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, and I work on automating technical support. Currently, I am working on building systems to understand complex technical support questions. Only around 19% of questions in technical support are simple "factoid" questions. Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it.
+	I am also fascinated by "humor" in natural language and am exploring algorithms that can "understand" humor in text and eventually even create it.	
 </p>
 
 </p>
@@ -87,8 +87,14 @@ Information Retrieval, and Machine Learning.</p>
 <div class="well">
 <h3>Publications</h3>
 <ol>
+<br/>
+<h4>2018</h4>
+<br/>
 <li><b>Abhirut Gupta</b>, Abhay Khosla, Gautam Singh, Gargi Dasgupta. Mining Procedures from Technical Support Documents. arXiv preprint <a href="https://arxiv.org/abs/1805.09780" target="_blank">arXiv:1805.09780</a></li>
 <li><b>Abhirut Gupta</b>, Anupama Ray, Gautam Singh, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Semantic Parsing for Technical Support Questions. Set to appear in <a target="_blank" href="https://coling2018.org/">COLING 2018</a></li>
+<br/>
+<h4>2016</h4>
+<br/>
 <li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Desire: Deep Semantic Understanding and Retrieval for Technical Support Services. <a target="_blank" href="http://www.springer.com/in/book/9783319681351">ICSOC 2016 Workshops</a>. <a target="_blank" href="./DESIRE_ICSOC2016.pdf">PDF</a></li>
 </ol>
 </div>
