too many "questions"

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Email: abhirutgupta@in.ibm.com <br>
 <br>
 
 <p>
-	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, and I work on automating technical support. Currently, I am working on building systems to understand complex technical support questions. Only around 19% of questions in technical support are simple "factoid" questions. Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it.
+	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, and I work on automating technical support. Currently, I am working on building systems to understand complex technical support questions. Only around 19% of questions in technical support are simple "factoid". Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it.
 	I am also fascinated by "humor" in natural language and am exploring algorithms that can "understand" humor in text and eventually even create it.	
 </p>
 
