--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120082380-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120082380-1');
+</script>
 <basefont size="10">
     <meta charset="utf-8">
     <title>Abhirut Gupta</title>
