--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Information Retrieval, and Machine Learning.</p>
 <br/>
 <h4>2018</h4>
 <br/>
-<li><b>Abhirut Gupta</b>, Abhay Khosla, Gautam Singh, Gargi Dasgupta. Mining Procedures from Technical Support Documents. arXiv preprint <a href="https://arxiv.org/abs/1805.09780" target="_blank">arXiv:1805.09780</a></li>
+<!--<li><b>Abhirut Gupta</b>, Abhay Khosla, Gautam Singh, Gargi Dasgupta. Mining Procedures from Technical Support Documents. arXiv preprint <a href="https://arxiv.org/abs/1805.09780" target="_blank">arXiv:1805.09780</a></li> -->
 <li><b>Abhirut Gupta</b>, Anupama Ray, Gautam Singh, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Semantic Parsing for Technical Support Questions. <a target="_blank" href="http://aclweb.org/anthology/C18-1275">COLING 2018</a></li>
 <br/>
 <h4>2016</h4>
