--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@ Information Retrieval, and Machine Learning.</p>
 <br/>
 <h4>2018</h4>
 <br/>
-<li>Prateeti Mohapatra, Yu Deng, <b>Abhirut Gupta</b>,Gargi Dasgupta, Amit Paradkar, Ruchi Mahindru, Daniela Rosu, Shu Tao, Pooja Aggarwal. Domain Knowledge Driven Key Term Extraction for IT Services. <a href="https://link.springer.com/chapter/10.1007/978-3-030-03596-9_35" target="_blank">16th International Conference, ICSOC 2018</a></li>
-<li><b>Abhirut Gupta</b>, Abhay Khosla, Gautam Singh, Gargi Dasgupta. Mining Procedures from Technical Support Documents. arXiv preprint <a href="https://arxiv.org/abs/1805.09780" target="_blank">arXiv:1805.09780</a></li>
-<li><b>Abhirut Gupta</b>, Anupama Ray, Gautam Singh, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Semantic Parsing for Technical Support Questions. <a target="_blank" href="http://aclweb.org/anthology/C18-1275">COLING 2018</a></li>
+<li>Prateeti Mohapatra, Yu Deng, <b>Abhirut Gupta</b>,Gargi Dasgupta, Amit Paradkar, Ruchi Mahindru, Daniela Rosu, Shu Tao, Pooja Aggarwal. <a href="https://link.springer.com/chapter/10.1007/978-3-030-03596-9_35" target="_blank"><b>Domain Knowledge Driven Key Term Extraction for IT Services.</b></a> 16th International Conference on Service-Oriented Computing, ICSOC 2018</li>
+<li><b>Abhirut Gupta</b>, Abhay Khosla, Gautam Singh, Gargi Dasgupta. <a href="https://arxiv.org/abs/1805.09780" target="_blank"><b>Mining Procedures from Technical Support Documents.</b></a> arXiv preprint. arXiv:1805.09780</li>
+<li><b>Abhirut Gupta</b>, Anupama Ray, Gautam Singh, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. <a target="_blank" href="http://aclweb.org/anthology/C18-1275"><b>Semantic Parsing for Technical Support Questions.</a></b> COLING 2018</li>
 <br/>
 <h4>2016</h4>
 <br/>
-<li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. Desire: Deep Semantic Understanding and Retrieval for Technical Support Services. <a target="_blank" href="http://www.springer.com/in/book/9783319681351">ICSOC 2016 Workshops</a>. <a target="_blank" href="./DESIRE_ICSOC2016.pdf">PDF</a></li>
+<li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. <a target="_blank" href="./DESIRE_ICSOC2016.pdf"><b>Desire: Deep Semantic Understanding and Retrieval for Technical Support Services.</b></a> ICSOC 2016 Workshops</li>
 </ol>
 </div>
 <div class="well">
