Changed description and research interest

--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@ Email: abhirutgupta@in.ibm.com <br>
 <br>
 
 <p>
-	I am a Research Engineer at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research, Bangalore</a>, and I work on automating technical support. Currently, I am working on building systems to understand complex technical support questions. Only around 19% of questions in technical support are simple "factoid". Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it.
-	I am also fascinated by "humor" in natural language and am exploring algorithms that can "understand" humor in text and eventually even create it.	
+	I am a Natural Language Processing Researcher at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research</a>, and I work on automating technical support. Only around 19% of questions in technical support are simple "factoid". Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it. I spend my days building algorithms for "understanding" these complex tech support problems. Over the last 4 years I've also worked on the following problems - 
+	<ul>
+		<li>Improving retrieval performance on tech support Question Answering</li> 
+		<li>Building a support ontology and Knowledge Graph</li>
+		<li>Automating construction of support chatbots from content</li>
+		<li>Extracting procedures from support documents</li>
+	</ul>
+	<!-- Currently, I am working on building systems to understand complex technical support questions. Only around 19% of questions in technical support are simple "factoid". Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it.
+	I am also fascinated by "humor" in natural language and am exploring algorithms that can "understand" humor in text and eventually even create it.	-->
 </p>
 
 </p>
@@ -88,10 +95,7 @@ Email: abhirutgupta@in.ibm.com <br>
 </div>
 <div class="well">
 <h3>Research Interest</h3>
-<p>My research interest lies in exploring application of machine learning techniques to open problems in Natural
-Language Processing.  Areas of interest include Natural Language Processing, Information Extraction,
-Information Retrieval, and Machine Learning.</p>
-<p>In particular, I would like to explore techniques for understanding unstructured information like language or images with limited supervision.</p>
+<p>My research interest lies in exploring Natural Language Understanding and Reasoning for real world applications. In particular, problems where simple pattern matching fails to meet human performance and require a thorough understanding of unstructured text to solve, interest me. Problems with very limited supervised task specific data are also of interest.</p>
 </div>
 <div class="well">
 <h3>Publications</h3>
