Changed description and research interest

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Email: abhirutgupta@in.ibm.com <br>
 </div>
 <div class="well">
 <h3>Research Interest</h3>
-<p>My research interest lies in exploring Natural Language Understanding and Reasoning for real world applications. In particular, problems where simple pattern matching fails to meet human performance and require a thorough understanding of unstructured text to solve, interest me. Problems with very limited supervised task specific data are also of interest.</p>
+<p>My research interest lies in exploring Natural Language Understanding and Reasoning for real world applications. In particular, problems where pattern matching approaches fail to meet human performance and require a thorough understanding of unstructured text to solve, interest me. Problems with very limited supervised task specific data are also of interest.</p>
 </div>
 <div class="well">
 <h3>Publications</h3>
