Added CODS 2020 TIG paper and slides

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@ Email: abhirutgupta@in.ibm.com <br>
 <h3>Publications</h3>
 <ol>
 <br/>
+<h4>2020</h4>
+<br/>
+<li><b>Abhirut Gupta</b>, Sandipan Sikdar, Prateeti Mohapatra, Niloy Ganguly. <a href="./papers/CoDS-COMAD_2020.pdf"><b>Topic Influence Graph Based Analysis of Seminal Papers</b></a>. CoDS COMAD 2020: Proceedings of the 7th ACM IKDD CoDS and 25th COMAD. <a href="./slides/CODS_COMAD_2020_TIG.pptx">Slides</a></li>
+<br/>
 <h4>2018</h4>
 <br/>
 <li>Prateeti Mohapatra, Yu Deng, <b>Abhirut Gupta</b>,Gargi Dasgupta, Amit Paradkar, Ruchi Mahindru, Daniela Rosu, Shu Tao, Pooja Aggarwal. <a href="https://link.springer.com/chapter/10.1007/978-3-030-03596-9_35" target="_blank"><b>Domain Knowledge Driven Key Term Extraction for IT Services.</b></a> 16th International Conference on Service-Oriented Computing, ICSOC 2018</li>
@@ -109,7 +113,7 @@ Email: abhirutgupta@in.ibm.com <br>
 <br/>
 <h4>2016</h4>
 <br/>
-<li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. <a target="_blank" href="./DESIRE_ICSOC2016.pdf"><b>Desire: Deep Semantic Understanding and Retrieval for Technical Support Services.</b></a> ICSOC 2016 Workshops</li>
+<li><b>Abhirut Gupta</b>, Arjun Akula, Gargi Dasgupta, Pooja Aggarwal, and Prateeti Mohapatra. <a target="_blank" href="./papers/DESIRE_ICSOC2016.pdf"><b>Desire: Deep Semantic Understanding and Retrieval for Technical Support Services.</b></a> ICSOC 2016 Workshops</li>
 </ol>
 </div>
 <div class="well">
