--- a/timeline_abst.html
+++ b/timeline_abst.html
@@ -8,7 +8,7 @@ Timeline Generation for Fluent Quantities
 <h2>
 Timeline Generation for Fluent Quantities
 </h2>
-<p><a href="./timeline.pdf">Report</a></p>
+<p><a href="./papers/timeline.pdf">Report</a></p>
 <h3>
 Abstract
 </h3>
