--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<ul class="nav">
 			<li class="active"><a href="index.html">Home</a></li>
 			<li><a href="cv.pdf">C.V.</a></li>
-			<li><a href="blog/index.html">Blog</a></li>
+			<!-- <li><a href="blog/index.html">Blog</a></li> -->
 		</ul>
 		<div class="nav-collapse">
 		</div><!--/.nav-collapse -->
