--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ Email: abhirutgupta@in.ibm.com <br>
 <br/>
 <h4>2020</h4>
 <br/>
+<li>Kushal Chauhan, <b>Abhirut Gupta</b>. <b>Improving Segmentation for Technical Support Problems</b></a>. <i>Full paper, set to appear at ACL 2020</i>. <font color="blue">Mentor to Kushal's internship at IBM Research, summer 2019.</font></li>
 <li><b>Abhirut Gupta</b>, Sandipan Sikdar, Prateeti Mohapatra, Niloy Ganguly. <a href="./papers/CoDS-COMAD_2020.pdf"><b>Topic Influence Graph Based Analysis of Seminal Papers</b></a>. CoDS COMAD 2020: Proceedings of the 7th ACM IKDD CoDS and 25th COMAD. <a href="./slides/CODS_COMAD_2020_TIG.pptx">Slides</a></li>
 <br/>
 <h4>2018</h4>
