link to the naacl paper

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@ Email: abhirutgupta@in.ibm.com <br>
 <h3>Publications</h3>
 <ol>
 <br/>
+<h4>2021</h4>
+<li><b>Abhirut Gupta</b>, Aditya Vavre, Sunita Sarawagi. <a href="https://aclanthology.org/2021.naacl-main.459/">Training Data Augmentation for Code-Mixed Translation.</a> NAACL 2021.</li>
+<br/>
 <h4>2020</h4>
 <br/>
 <li>Kushal Chauhan, <b>Abhirut Gupta</b>. <a href="https://aclanthology.org/2020.acl-main.284/"><b>Improving Segmentation for Technical Support Problems.</b></a> ACL 2020. <font color="blue">(Mentor to Kushal's internship at IBM Research, summer 2019).</font></li>
