added the emnlp accepted paper

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@ Email: abhirutgupta@in.ibm.com <br>
 <ol>
 <br/>
 <h4>2021</h4>
-<li><b>Abhirut Gupta</b>, Aditya Vavre, Sunita Sarawagi. <a href="https://aclanthology.org/2021.naacl-main.459/">Training Data Augmentation for Code-Mixed Translation.</a> NAACL 2021.</li>
+<br/>
+<li>Sahana Ramnath, Melvin Johnson, <b>Abhirut Gupta</b>, and Aravindan Raghuveer. <b>HintedBT: Augmenting Back-Translation with Quality and Transliteration Hints.</b> Set to appear at EMNLP 2021.</li>
+<li><b>Abhirut Gupta</b>, Aditya Vavre, Sunita Sarawagi. <a href="https://aclanthology.org/2021.naacl-main.459/"><b>Training Data Augmentation for Code-Mixed Translation.</b></a> NAACL 2021.</li>
 <br/>
 <h4>2020</h4>
 <br/>
