--- a/index.html
+++ b/index.html
@@ -54,15 +54,13 @@
 <tr>
 <td width="70%">
 <p>
-<h1>Abhirut Gupta</h1>
-<i>Research Software Engineer</i> <br>
-<a href="http://www.research.ibm.com/labs/india/">IBM Research</a><br>
+<h1>Abhirut Gupta</h1> <br/> <br/>
+<i>Research Software Engineer</i> <br/> <br/>
+<a href="https://research.google/people/AbhirutGupta/">Google Research</a> <br/> <br/>
 
-Email: abhirutgupta@in.ibm.com <br>
-<a target="_blank" href="./cv.pdf">CV</a><br>
 <br>
 
-<p>
+<!-- <p>
 	I am a Natural Language Processing Researcher at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research</a>, and I work on automating technical support. Only around 19% of questions in technical support are simple "factoid". Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it. I spend my days building algorithms for "understanding" these complex tech support problems. Over the last 4 years I've also worked on the following problems - 
 	<ul>
 		<li>Improving retrieval performance on tech support Question Answering</li> 
@@ -72,7 +70,7 @@ Email: abhirutgupta@in.ibm.com <br>
 	</ul>
 	<!-- Currently, I am working on building systems to understand complex technical support questions. Only around 19% of questions in technical support are simple "factoid". Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it.
 	I am also fascinated by "humor" in natural language and am exploring algorithms that can "understand" humor in text and eventually even create it.	-->
-</p>
+</p> -->
 
 </p>
 </td>
