--- a/index.html
+++ b/index.html
@@ -60,17 +60,10 @@
 
 <br>
 
-<!-- <p>
-	I am a Natural Language Processing Researcher at <a target="_blank" href="http://www.research.ibm.com/labs/india/">IBM Research</a>, and I work on automating technical support. Only around 19% of questions in technical support are simple "factoid". Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it. I spend my days building algorithms for "understanding" these complex tech support problems. Over the last 4 years I've also worked on the following problems - 
-	<ul>
-		<li>Improving retrieval performance on tech support Question Answering</li> 
-		<li>Building a support ontology and Knowledge Graph</li>
-		<li>Automating construction of support chatbots from content</li>
-		<li>Extracting procedures from support documents</li>
-	</ul>
-	<!-- Currently, I am working on building systems to understand complex technical support questions. Only around 19% of questions in technical support are simple "factoid". Around 50% questions require complex understanding of the problem, the setup which led to the problem, and attempts by the user to mitigate it.
-	I am also fascinated by "humor" in natural language and am exploring algorithms that can "understand" humor in text and eventually even create it.	-->
-</p> -->
+<p>
+	
+I work as a Software Engineer on the Advertisement Sciences team in Google Research, Bangalore. At Google, my work broadly encompasses various aspects of query understanding. My research interests include Natural Language Processing and Machine Translation, with a focus on low resource scenarios. I finished my Masters from IIT Bombay in 2014, and my Bachelors in Computer Science from NIT Nagpur in 2012. From 2014 to Feb 2020, I worked as a Software Engineer at IBM Research in Bangalore. I worked on a variety of language and understanding problems, and received 2 Outstanding Technical Achievement awards for my work during the period.
+</p>
 
 </p>
 </td>
