--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@ I work as a Software Engineer on the Advertisement Sciences team in Google Resea
 <h3>Publications</h3>
 <ol>
 <br/>
+<h4>2022</h4>
+<br/>
+<li>Aditya Vavre, <b>Abhirut Gupta</b>, Sunita Sarawagi. <a href="./papers/b2bt_paper.pdf"><b>Adapting Multilingual Models for Code-Mixed Translation.</b></a> EMNLP 2022 Findings.</li>
+<br/>
 <h4>2021</h4>
 <br/>
 <li>Sahana Ramnath, Melvin Johnson, <b>Abhirut Gupta</b>, and Aravindan Raghuveer. <b>HintedBT: Augmenting Back-Translation with Quality and Transliteration Hints.</b> Set to appear at EMNLP 2021.</li>
