--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ I work as a Software Engineer on the Advertisement Sciences team in Google Resea
 <br/>
 <h4>2021</h4>
 <br/>
-<li>Sahana Ramnath, Melvin Johnson, <b>Abhirut Gupta</b>, and Aravindan Raghuveer. <b>HintedBT: Augmenting Back-Translation with Quality and Transliteration Hints.</b> Set to appear at EMNLP 2021.</li>
+<li>Sahana Ramnath, Melvin Johnson, <b>Abhirut Gupta</b>, and Aravindan Raghuveer. <a href="https://aclanthology.org/2021.emnlp-main.129/"><b>HintedBT: Augmenting Back-Translation with Quality and Transliteration Hints.</b></a> EMNLP 2021.</li>
 <li><b>Abhirut Gupta</b>, Aditya Vavre, Sunita Sarawagi. <a href="https://aclanthology.org/2021.naacl-main.459/"><b>Training Data Augmentation for Code-Mixed Translation.</b></a> NAACL 2021.</li>
 <br/>
 <h4>2020</h4>
