Added ACL 2023 accepted paper

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@ I work as a Software Engineer on the Advertisement Sciences team in Google Resea
 <h3>Publications</h3>
 <ol>
 <br/>
+<h4>2023</h4>
+<br/>
+<li><b>Abhirut Gupta</b>, Ananya B. Sai, Richard Sproat, Yuri Vasilevski, James S. Ren, Ambarish Jash, Sukhdeep S. Sodhi and Aravindan Raghuveer. <a href=""><b>Bi-Phone: Modeling Inter Language Phonetic Influences in Text.</b></a> ACL 2023.</li>
+<br/>
 <h4>2022</h4>
 <br/>
 <li>Aditya Vavre, <b>Abhirut Gupta</b>, Sunita Sarawagi. <a href="./papers/b2bt_paper.pdf"><b>Adapting Multilingual Models for Code-Mixed Translation.</b></a> EMNLP 2022 Findings.</li>
