Update paper link for EMNLP 2022 paper.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ I work as a Software Engineer on the Advertisement Sciences team in Google Resea
 <br/>
 <h4>2022</h4>
 <br/>
-<li>Aditya Vavre, <b>Abhirut Gupta</b>, Sunita Sarawagi. <a href="./papers/b2bt_paper.pdf"><b>Adapting Multilingual Models for Code-Mixed Translation.</b></a> EMNLP 2022 Findings.</li>
+<li>Aditya Vavre, <b>Abhirut Gupta</b>, Sunita Sarawagi. <a href="https://aclanthology.org/2022.findings-emnlp.528/"><b>Adapting Multilingual Models for Code-Mixed Translation.</b></a> EMNLP 2022 Findings.</li>
 <br/>
 <h4>2021</h4>
 <br/>
